fix: open dirfs

--- a/testdata/test1/production.env
+++ b/testdata/test1/production.env
@@ -1,7 +1,11 @@
 # ENV_* will be overrided by system envrionment
-ENV_A=wrong
-ENV_1=100
-ENV_TRUE=false
+ENV_STR=PROD
+ENV_INT=0
 
-PROD_B="B"
-PROD_2='2'
+# DOT_* will be overrided by .env file.
+DOT_STR=DOT
+DOT_INT=0
+
+
+PROD_STR=PROD
+PROD_INT=1
